//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table users {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  email String [unique]
  password String
  name String
  profile String
  facebookId String [unique]
  refreshToken String
  forms forms [not null]
  rewards rewards [not null]
}

Table forms {
  id Int [pk, increment]
  name String
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  type String [not null]
  validity DateTime [not null]
  style Json [not null]
  metaData Json [not null]
  questions questions [not null]
  responses responses [not null]
  reward rewards
  rewardId Int [unique]
  User users
  userId Int
  Answers answers [not null]
}

Table questions {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  question String [not null]
  type String [not null]
  content Json [not null]
  answers answers [not null]
  Form forms
  formId Int
}

Table rewards {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  type String [not null]
  content Json [not null]
  validity DateTime [not null]
  count Int [not null, default: 0]
  style Json [not null]
  Form forms
  User users
  userId Int
  redemptions redemptions [not null]
}

Table responses {
  id Int [pk, increment]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  name String [not null]
  number String [not null]
  totalScore Int [not null]
  answers answers [not null]
  meta Json [not null]
  Form forms
  formId Int
}

Table answers {
  id Int [pk, increment]
  answer String [not null]
  score String
  meta Json
  Question questions
  questionId Int [not null]
  Response responses
  responseId Int
  Form forms
  formId Int
}

Table redemptions {
  id Int [pk, increment]
  code String [unique, not null]
  phone String
  rewardId Int [not null]
  isPublished Boolean [not null]
  isProcessed Boolean [not null]
  reward rewards
}

Ref: forms.rewardId - rewards.id

Ref: forms.userId > users.id

Ref: questions.formId > forms.id

Ref: rewards.userId > users.id

Ref: responses.formId > forms.id

Ref: answers.questionId > questions.id

Ref: answers.responseId > responses.id

Ref: answers.formId > forms.id

Ref: redemptions.rewardId > rewards.id